fixtures/corpus/invalid/typ-missing-type.rune
[TYP] price
    a type declaration with no underlying primitive
